data/tuning_runs/real_20251225_121807_06660f/run.log
2025-12-25 12:18:07,495 INFO: === STRICT PHASE 1.5 START (RunID: real_20251225_121807_06660f) ===
2025-12-25 12:18:07,653 INFO: NumExpr defaulting to 12 threads.
2025-12-25 12:18:07,823 INFO: [Phase 0] Preflight Check
2025-12-25 12:18:08,350 INFO: 캐시 기반 유니버스: 14개 종목 (지수 코드 제외)
2025-12-25 12:18:08,461 INFO: [Phase 1] Tuning Loop
2025-12-25 12:18:08,463 INFO: Split 계산: Train=24M, Val=6M, Test=6M
2025-12-25 12:18:08,463 INFO: [캐시] lb=3M, key=a8081cfb
2025-12-25 12:18:08,467 ERROR: Objective Failed: expected an indented block after 'if' statement on line 257 (backtest_service.py, line 258)
Traceback (most recent call last):
  File "E:\AI Study\krx_alertor_modular\tools\run_phase15_realdata.py", line 330, in objective
    result = run_backtest_for_tuning(
        params=params,
    ...<6 lines>...
        guardrail_config=guardrail_config
    )
  File "E:\AI Study\krx_alertor_modular\extensions\tuning\runner.py", line 176, in run_backtest_for_tuning
    train_metrics = _run_single_backtest(
        params=params,
    ...<4 lines>...
        universe_codes=universe_codes,
    )
  File "E:\AI Study\krx_alertor_modular\extensions\tuning\runner.py", line 53, in _run_single_backtest
    from app.services.backtest_service import BacktestService, BacktestParams
  File "E:\AI Study\krx_alertor_modular\app\services\backtest_service.py", line 258
    if price_data is None or price_data.empty:
    ^^
IndentationError: expected an indented block after 'if' statement on line 257
2025-12-25 12:18:08,480 ERROR: Orchestrator Crash: cannot access local variable 'result' where it is not associated with a value
Traceback (most recent call last):
  File "E:\AI Study\krx_alertor_modular\tools\run_phase15_realdata.py", line 386, in run_strict_phase15
    study.optimize(objective, n_trials=args.trials)
    ~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\minan\anaconda3\Lib\site-packages\optuna\study\study.py", line 490, in optimize
    _optimize(
    ~~~~~~~~~^
        study=self,
        ^^^^^^^^^^^
    ...<7 lines>...
        show_progress_bar=show_progress_bar,
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "C:\Users\minan\anaconda3\Lib\site-packages\optuna\study\_optimize.py", line 63, in _optimize
    _optimize_sequential(
    ~~~~~~~~~~~~~~~~~~~~^
        study,
        ^^^^^^
    ...<8 lines>...
        progress_bar=progress_bar,
        ^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "C:\Users\minan\anaconda3\Lib\site-packages\optuna\study\_optimize.py", line 160, in _optimize_sequential
    frozen_trial_id = _run_trial(study, func, catch)
  File "C:\Users\minan\anaconda3\Lib\site-packages\optuna\study\_optimize.py", line 258, in _run_trial
    raise func_err
  File "C:\Users\minan\anaconda3\Lib\site-packages\optuna\study\_optimize.py", line 201, in _run_trial
    value_or_values = func(trial)
  File "E:\AI Study\krx_alertor_modular\tools\run_phase15_realdata.py", line 377, in objective
    if result and result.guardrail_checks and result.guardrail_checks.failures:
       ^^^^^^
UnboundLocalError: cannot access local variable 'result' where it is not associated with a value
2025-12-25 12:18:08,482 CRITICAL: Uncaught Exception:
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "E:\AI Study\krx_alertor_modular\tools\run_phase15_realdata.py", line 554, in <module>
    run_strict_phase15("A", args)
    ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^
  File "E:\AI Study\krx_alertor_modular\tools\run_phase15_realdata.py", line 386, in run_strict_phase15
    study.optimize(objective, n_trials=args.trials)
    ~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\minan\anaconda3\Lib\site-packages\optuna\study\study.py", line 490, in optimize
    _optimize(
    ~~~~~~~~~^
        study=self,
        ^^^^^^^^^^^
    ...<7 lines>...
        show_progress_bar=show_progress_bar,
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "C:\Users\minan\anaconda3\Lib\site-packages\optuna\study\_optimize.py", line 63, in _optimize
    _optimize_sequential(
    ~~~~~~~~~~~~~~~~~~~~^
        study,
        ^^^^^^
    ...<8 lines>...
        progress_bar=progress_bar,
        ^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "C:\Users\minan\anaconda3\Lib\site-packages\optuna\study\_optimize.py", line 160, in _optimize_sequential
    frozen_trial_id = _run_trial(study, func, catch)
  File "C:\Users\minan\anaconda3\Lib\site-packages\optuna\study\_optimize.py", line 258, in _run_trial
    raise func_err
  File "C:\Users\minan\anaconda3\Lib\site-packages\optuna\study\_optimize.py", line 201, in _run_trial
    value_or_values = func(trial)
  File "E:\AI Study\krx_alertor_modular\tools\run_phase15_realdata.py", line 377, in objective
    if result and result.guardrail_checks and result.guardrail_checks.failures:
       ^^^^^^
UnboundLocalError: cannot access local variable 'result' where it is not associated with a value
2025-12-25 12:18:08,485 INFO: ResultPackager: Saving Artifacts...
